--- a/home.html
+++ b/home.html
@@ -7,12 +7,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#map">Map</a>
-        <a href="#bh">Boarding House</a>
-        <a href="#about">About</a>
-      </div>
-      
+
+    <div class="sidebar" id="sidebar">
+        <nav class="navbar">
+            <a href="#home" class="active">Home</a>
+            <a href="#map">Map</a>
+            <a href="#bh">Boarding House</a>
+            <a href="#about">About</a>
+        </nav>
+    </div>
+
+
+    <div class="container">
+        <form action="" class="search-bar">
+            <input type="text" placeholder="search anything" name="q">
+            <button type="submit"><img src="search...png" alt=""></button>
+        </form>
+    </div>
+
+ 
+    <button class="toggle-btn" id="toggle-btn">&#9776;</button>
+    <script src="script.js"></script>
 </body>
 </html>
