--- a/home.html
+++ b/home.html
@@ -8,25 +8,21 @@
 </head>
 <body>
 
-    <div class="sidebar" id="sidebar">
+    <header class="header">
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
-            <a href="#map">Map</a>
+            <a href="map.html">Map</a>
             <a href="#bh">Boarding House</a>
             <a href="#about">About</a>
         </nav>
-    </div>
-
-
+    </header>
+    
     <div class="container">
         <form action="" class="search-bar">
-            <input type="text" placeholder="search anything" name="q">
+            <input type="text" placeholder="search location" name="q">
             <button type="submit"><img src="search...png" alt=""></button>
         </form>
     </div>
-
- 
-    <button class="toggle-btn" id="toggle-btn">&#9776;</button>
-    <script src="script.js"></script>
+    
 </body>
 </html>
